--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,11 +1,54 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:auto="http://schemas.android.com/apk/res-auto"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:gravity="center"
+	android:orientation="vertical">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+	<EditText
+		android:layout_width="wrap_content"
+		android:ems="10"
+		android:layout_height="wrap_content"
+		android:hint="Enter Math Here"
+		android:id="@+id/main_input"
+		android:typeface="monospace"
+	/>
+
+	<LinearLayout
+		android:orientation="horizontal"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
+
+		<Button
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Convert!"
+			android:id="@+id/convert_button"/>
+
+	</LinearLayout>
+
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Your Code goes here"
+		android:textAppearance="?android:attr/textAppearanceSmall"
+		android:id="@+id/output_text"
+		android:textIsSelectable="true"
+		android:layout_margin="10dp"/>
+
+	<io.github.kexanie.library.MathView
+		android:id="@+id/formula_one"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:minLines="1"
+		android:maxLines="4"
+		auto:text="$$x = {-b \\pm \\sqrt{b^2-4ac} \\over 2a}$$"
+		auto:engine="MathJax">
+
+	</io.github.kexanie.library.MathView>
 
 </LinearLayout>
+
+
