--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -13,8 +13,7 @@
 		android:layout_height="wrap_content"
 		android:hint="Enter Math Here"
 		android:id="@+id/main_input"
-		android:typeface="monospace"
-	/>
+		android:typeface="monospace"/>
 
 	<LinearLayout
 		android:orientation="horizontal"
@@ -49,6 +48,12 @@
 
 	</io.github.kexanie.library.MathView>
 
-</LinearLayout>
+	<Button
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Save"
+		android:visibility="invisible"
+		android:id="@+id/save_button"/>
 
+</LinearLayout>
 
