--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -14,8 +14,7 @@
 		android:hint="Enter Math Here"
 		android:id="@+id/main_input"
 		android:typeface="monospace"
-		android:text="$$$$"
-		/>
+		android:text="$$$$"/>
 
 	<LinearLayout
 		android:orientation="horizontal"
@@ -56,6 +55,12 @@
 		android:text="Save"
 		android:visibility="invisible"
 		android:id="@+id/save_button"/>
+
+	<ProgressBar
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/load"
+		android:visibility="invisible"/>
 
 </LinearLayout>
 
