--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,7 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     
     <item
-        android:id="@+id/setting"
-        android:title="Settings"/>
+        android:id="@+id/option"
+        android:title="Options"
+		/>
+	<item
+		android:id="@+id/about"
+		android:title="About"/>
     
 </menu>
